--- a/config.json
+++ b/config.json
@@ -1,3 +1,1 @@
-{
-  "game_path": "D:/星穹铁道/Star Rail/launcher.exe"
-}
+{"game_path": "D:/\u661f\u7a79\u94c1\u9053/Star Rail/launcher.exe", "auto-fight": true, "use_fuel": false, "fuel_number": 0, "use_explore": false, "explore_number": 0}
