--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"game_path": "D:/\u661f\u7a79\u94c1\u9053/Star Rail/launcher.exe", "auto-fight": true, "use_fuel": false, "fuel_number": 0, "use_explore": false, "explore_number": 0}
+{"game_path": "D:/\u661f\u7a79\u94c1\u9053/Star Rail/launcher.exe", "auto-fight": true, "use_fuel": true, "fuel_number": 1, "use_explore": false, "explore_number": 1}
