整合锄大地功能
将锄大地整合进gui，并对内容进行部分修改。

--- a/config.json
+++ b/config.json
@@ -1,1 +1,39 @@
-{"game_path": "D:/\u661f\u7a79\u94c1\u9053/Star Rail/launcher.exe", "auto-fight": true, "use_fuel": true, "fuel_number": 1, "use_explore": false, "explore_number": 1}
+{
+  "game_path": "D:/星穹铁道/Star Rail/launcher.exe",
+  "auto-fight": true,
+  "use_fuel": true,
+  "fuel_number": 1,
+  "use_explore": false,
+  "explore_number": 1,
+  "star_version": "0",
+  "open_map": "m",
+  "move_excursion": 0,
+  "auto_battle_persistence": 0,
+  "webhook_url": "",
+  "join_time": 8,
+  "level": "INFO",
+  "rawgithub_proxy": "",
+  "real_height": 1080,
+  "sprint": false,
+  "fight_time": 300,
+  "github_proxy": "",
+  "left_border": -841.5,
+  "stop": false,
+  "real_width": 1920,
+  "move_division_excursion": 1.0,
+  "start": false,
+  "borderless": false,
+  "deficiency": true,
+  "scaling": 1.5,
+  "github_source": "Starry-Wind",
+  "test": false,
+  "team_number": 1,
+  "proxies": "",
+  "map_version": "0",
+  "fight_data": {},
+  "language": "zh_CN",
+  "picture_version": "0",
+  "debug": false,
+  "up_border": -199.5,
+  "img": 0
+}
