--- a/config.json
+++ b/config.json
@@ -17,14 +17,14 @@
   "sprint": false,
   "fight_time": 300,
   "github_proxy": "",
-  "left_border": -841.5,
+  "left_border": 11.0,
   "stop": false,
   "real_width": 1920,
   "move_division_excursion": 1.0,
   "start": false,
   "borderless": false,
   "deficiency": true,
-  "scaling": 1.5,
+  "scaling": 1.0,
   "github_source": "Starry-Wind",
   "test": false,
   "team_number": 1,
@@ -32,8 +32,8 @@
   "map_version": "0",
   "fight_data": {},
   "language": "zh_CN",
-  "picture_version": "0",
+  "picture_version": "20230725120009",
   "debug": false,
-  "up_border": -199.5,
+  "up_border": 45.0,
   "img": 0
 }
