--- a/config.json
+++ b/config.json
@@ -37,8 +37,39 @@
   "up_border": 45.0,
   "img": 0,
   "auto": {
-    "stamina": {},
-    "world": {},
+    "stamina": {
+      "calyx_1": 4,
+      "calyx_2": 0,
+      "calyx_3": 0,
+      "calyx_4": 2,
+      "calyx_5": 0,
+      "calyx_6": 0,
+      "calyx_7": 0,
+      "calyx_8": 0,
+      "calyx_9": 0,
+      "calyx_10": 0,
+      "shadow_1": 0,
+      "shadow_2": 0,
+      "shadow_3": 0,
+      "shadow_4": 0,
+      "shadow_5": 0,
+      "shadow_6": 0,
+      "shadow_7": 0,
+      "shadow_8": 0,
+      "shadow_9": 0,
+      "shadow_10": 0,
+      "cavern_1": 0,
+      "cavern_2": 0,
+      "cavern_3": 0,
+      "cavern_4": 0,
+      "cavern_5": 0,
+      "cavern_6": 0,
+      "cavern_7": 0,
+      "echo_1": 0,
+      "echo_2": 0,
+      "echo_3": 2
+    },
+    "world": "支援舱段-1",
     "universe": {}
   }
 }
