--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "game_path": "D:/\u661f\u7a79\u94c1\u9053/Star Rail/launcher.exe",
+  "game_path": "D:/星穹铁道/Star Rail/launcher.exe",
   "auto_fight": true,
   "use_fuel": true,
   "fuel_number": 1,
@@ -38,8 +38,39 @@
       "echo_2": 0,
       "echo_3": 2
     },
-    "world": "\u652f\u63f4\u8231\u6bb5-1",
+    "world": "支援舱段-1",
     "universe": {}
   },
-  "angle": 1.0235834899774117
+  "angle": 1.0235834899774117,
+  "fight_data": {},
+  "scaling": 1.5,
+  "github_proxy": "",
+  "stop": false,
+  "star_version": "0",
+  "language": "zh_CN",
+  "up_border": 44.25,
+  "map_version": "0",
+  "img": 0,
+  "left_border": 11.25,
+  "rawgithub_proxy": "",
+  "fight_time": 300,
+  "level": "INFO",
+  "auto_battle_persistence": 0,
+  "join_time": 8,
+  "team_number": 1,
+  "move_division_excursion": 1.0,
+  "start": false,
+  "picture_version": "0",
+  "test": false,
+  "sprint": false,
+  "open_map": "m",
+  "webhook_url": "",
+  "move_excursion": 0,
+  "proxies": "",
+  "borderless": false,
+  "real_width": 0,
+  "debug": false,
+  "deficiency": true,
+  "real_height": 0,
+  "github_source": "Starry-Wind"
 }
