--- a/config.json
+++ b/config.json
@@ -1,47 +1,25 @@
 {
-  "game": {
-    "game_path": "D:/星穹铁道/Star Rail/launcher.exe",
-    "auto_fight": true,
-    "use_fuel": false,
-    "use_explore": false
-  },
-  "auto": {
-    "stamina": {
-      "calyx_1": 4,
-      "calyx_2": 0,
-      "calyx_3": 0,
-      "calyx_4": 2,
-      "calyx_5": 0,
-      "calyx_6": 0,
-      "calyx_7": 0,
-      "calyx_8": 0,
-      "calyx_9": 0,
-      "calyx_10": 0,
-      "shadow_1": 0,
-      "shadow_2": 0,
-      "shadow_3": 0,
-      "shadow_4": 0,
-      "shadow_5": 0,
-      "shadow_6": 0,
-      "shadow_7": 0,
-      "shadow_8": 0,
-      "shadow_9": 0,
-      "shadow_10": 0,
-      "cavern_1": 0,
-      "cavern_2": 0,
-      "cavern_3": 0,
-      "cavern_4": 0,
-      "cavern_5": 0,
-      "cavern_6": 0,
-      "cavern_7": 0,
-      "echo_1": 0,
-      "echo_2": 0,
-      "echo_3": 2
+    "universe": {
+        "auto_angle": false,
+        "last": {},
+        "angle": 1.0
     },
-    "world": "支援舱段-1",
-    "universe": {}
-  },
-  "angle": 1.0235834899774117,
-  "open_map": "m",
-  "MvQuality": "SD"
+    "game": {
+        "auto_fight": false,
+        "game_path": "D:/星穹铁道/Star Rail/launcher.exe",
+        "open_map": "m"
+    },
+    "stamina": {
+        "last": {},
+        "use_explore": false,
+        "use_fuel": false
+    },
+    "world": {
+        "last": {},
+        "angle": 1.0
+    },
+    "QFluentWidgets": {
+        "ThemeColor": "#ff009faa",
+        "ThemeMode": "Auto"
+    }
 }
