--- a/config.json
+++ b/config.json
@@ -1,4 +1,16 @@
 {
+    "abyss": {
+        "order_text": [
+            1,
+            2,
+            3,
+            4,
+            10,
+            9,
+            8,
+            7
+        ]
+    },
     "game": {
         "auto_fight": false,
         "game_path": "D:/星穹铁道/Star Rail/launcher.exe",
@@ -43,7 +55,7 @@
             "shadow_11": 0,
             "shadow_12": 0
         },
-        "time": "2023年09月08日 11:04:10",
+        "time": "2023年09月11日 21:19:31",
         "use_explore": false,
         "use_fuel": false
     },
@@ -56,7 +68,7 @@
         "ThemeMode": "Auto"
     },
     "universe": {
-        "angle": 1.0094280590623015,
+        "angle": 1.0117566128294584,
         "auto_angle": false,
         "bonus": true,
         "count": 1,
@@ -64,7 +76,7 @@
         "difficulty": 3,
         "fate": "丰饶",
         "find": 1,
-        "number": 5,
+        "number": 6,
         "show_map": 0,
         "speed": 0,
         "update": 0
