--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,44 @@
-certifi==2023.7.22
-charset-normalizer==3.2.0
-coloredlogs==15.0.1
-darkdetect==0.8.0
-decorator==5.1.1
-EasyProcess==1.1
-entrypoint2==1.1
-flatbuffers==23.5.26
-humanfriendly==10.0
-idna==3.4
-keyboard==0.13.5
-MouseInfo==0.1.3
-mpmath==1.3.0
-mss==9.0.1
-numpy==1.25.2
-onnxruntime==1.15.1
-opencv-python==4.8.0.76
-packaging==23.1
-Pillow==10.0.0
-plyer==2.1.0
-ppocr-onnx==0.0.3.9
-protobuf==4.24.3
-PyAutoGUI==0.9.54
-pyclipper==1.3.0.post5
-PyGetWindow==0.0.9
-PyMsgBox==1.0.9
-pyperclip==1.8.2
-pyreadline3==3.4.1
-PyRect==0.2.0
-pyscreenshot==3.1
-PyScreeze==0.1.29
-PySide6==6.4.2
-PySide6-Addons==6.4.2
-PySide6-Essentials==6.4.2
-PySide6-Fluent-Widgets==1.2.0
-PySideSix-Frameless-Window==0.3.2
-pytweening==1.0.7
-pyuac==0.0.3
-pywin32==306
-requests==2.31.0
-shapely==2.0.1
-shiboken6==6.4.2
-sympy==1.12
-tee==0.0.3
-urllib3==2.0.4
+certifi
+charset-normalizer
+coloredlogs
+darkdetect
+decorator
+EasyProcess
+entrypoint2
+flatbuffers
+humanfriendly
+idna
+keyboard
+MouseInfo
+mpmath
+mss
+numpy
+onnxruntime
+opencv-python
+packaging
+Pillow
+ppocr-onnx
+protobuf
+PyAutoGUI
+pyclipper
+PyGetWindow
+PyMsgBox
+pyperclip
+pyreadline3
+PyRect
+pyscreenshot
+PyScreeze
+PySide6
+PySide6-Addons
+PySide6-Essentials
+PySide6-Fluent-Widgets
+PySideSix-Frameless-Window
+pytweening
+pyuac
+pywin32
+requests
+shapely
+shiboken6
+sympy
+tee
+urllib3
